--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -1,6 +1,146 @@
 .design {
-	padding-top: 100px;
-	padding-bottom: 100px;
+	@include adaptive-value("padding-top", 100, 80, 0);
+	@include adaptive-value("padding-bottom", 100, 30, 0);
 	border: 1px solid #d8e0e8;
 	background: #f6f9fa;
+	&__body {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+
+	&__title {
+		font-family: "Montserrat", sans-serif;
+		text-transform: uppercase;
+		@include adaptive-value("font-size", 30, 20, 0);
+		font-weight: 700;
+		line-height: 1;
+		text-align: center;
+		color: #333b42;
+		@include adaptive-value("margin-bottom", 32, 20, 0);
+	}
+
+	&__descr {
+		text-align: center;
+		@include adaptive-value("margin-bottom", 45, 20, 0);
+	}
+
+	&__gallery {
+	}
+}
+.gallery {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	&__links {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: 2px solid #28c8c6;
+		margin-bottom: 50px;
+		@include adaptive-value("margin-bottom", 50, 20, 0);
+		width: 520px;
+	}
+
+	&__item-link {
+		padding: 24px 30px;
+		color: #28c8c6;
+		text-transform: uppercase;
+		&:first-child {
+			padding-left: 30px;
+		}
+		&:last-child {
+			padding-right: 30px;
+		}
+		&:hover {
+			background: #28c8c6;
+			color: #f6f9fa;
+		}
+	}
+
+	&__link {
+	}
+
+	&__column {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 -10px;
+	}
+
+	&__items {
+		padding: 0 10px;
+		flex: 0 1 33.333%;
+		&:hover {
+			transform: scale(1.1);
+			a {
+				color: #28c8c6;
+			}
+		}
+	}
+
+	&__photo {
+		overflow: hidden;
+		border-radius: 8px 8px 0 0;
+		border: 1px solid #d8e0e8;
+	}
+
+	&__title {
+		font-family: "Montserrat", sans-serif;
+		line-height: 1.76;
+		text-align: center;
+		text-transform: uppercase;
+		display: block;
+		padding: 31px;
+		background: #fff;
+		border-radius: 0 0 8px 8px;
+		border: 1px solid #d8e0e8;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		&::after {
+			content: "";
+			display: inline-block;
+			background: url("../img/icon/arrow-one.svg") center/cover no-repeat;
+			width: 8px;
+			height: 14px;
+			margin-left: 46px;
+		}
+	}
+}
+
+@media (max-width: 769px) {
+	.gallery {
+		display: block;
+		text-align: center;
+		&__links {
+			display: block;
+			width: 100%;
+		}
+
+		&__column {
+			display: block;
+		}
+
+		&__items {
+			padding: 0;
+			img {
+				width: 100%;
+			}
+			&:not(:last-child) {
+				margin-bottom: 20px;
+			}
+			&:hover {
+				transform: scale(1.1);
+				a {
+					color: #28c8c6;
+				}
+			}
+		}
+	}
 }
