--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -1,10 +1,10 @@
 .first {
 	height: 100%;
-	background: url('../img/header/bg.png') center/cover no-repeat;
+	background: url("../img/header/bg.png") center/cover no-repeat;
 	&__container {
 		height: 100vh;
-		display: flex; 
-		justify-content: center; 
+		display: flex;
+		justify-content: center;
 		align-items: flex-start;
 		flex-direction: column;
 	}
@@ -12,21 +12,20 @@
 	&__title {
 		font-weight: 700;
 		width: 45%;
-		font-size: 60px;
-		@include adaptive-value('font-size', 60, 45, 0);
-		font-family: 'Montserrat', sans-serif;
+		@include adaptive-value("font-size", 60, 45, 0);
+		font-family: "Montserrat", sans-serif;
 		text-transform: uppercase;
 		line-height: 0.92;
-		color:#fff;
-		@include adaptive-value('margin-bottom', 40, 25, 0);
+		color: #fff;
+		@include adaptive-value("margin-bottom", 40, 25, 0);
 	}
 
 	&__descr {
 		font-size: 16px;
 		line-height: 1.5;
-		color:#fff;
+		color: #fff;
 		width: 45%;
-		@include adaptive-value('margin-bottom', 40, 20, 0);
+		@include adaptive-value("margin-bottom", 40, 20, 0);
 	}
 
 	&__form {
@@ -39,17 +38,17 @@
 		height: 60px;
 		padding: 25px;
 		border-radius: 3px;
-		font-family: 'Montserrat', sans-serif;
+		font-family: "Montserrat", sans-serif;
 		line-height: 1.5;
 		color: rgba(51, 51, 51, 0.9);
 		margin-right: 17px;
-		&:focus{
+		&:focus {
 			border: 1px solid #28c8c6;
-			box-shadow: 0px  0px 20px 1px #20a7a4;
+			box-shadow: 0px 0px 20px 1px #20a7a4;
 		}
 	}
 
-	&__btn{	
+	&__btn {
 		width: 64px;
 		height: 59px;
 		background: #28c8c6;
@@ -58,19 +57,20 @@
 		justify-content: center;
 		align-items: center;
 		transition: background 0.3s ease-in-out;
-		&::after{
-			content:"";
+		&::after {
+			content: "";
 			display: block;
-			background: url('../img/icon/arrow.svg') center/cover no-repeat;
+			background: url("../img/icon/arrow.svg") center/cover no-repeat;
 			width: 16px;
 			height: 16px;
 			transition: background 0.3s ease-in-out;
 		}
-		&:hover{
+		&:hover {
 			background: #fff;
+			color: #28c8c6;
 			transition: background 0.3s ease-in-out;
-			&::after{
-				background: url('../img/icon/arrow_green.svg');
+			&::after {
+				background: url("../img/icon/arrow_green.svg");
 				transition: background 0.3s ease-in-out;
 			}
 		}
@@ -83,28 +83,29 @@
 .btn-text {
 	display: none;
 }
-@media (max-width: 1025px){
-	.first{
+@media (max-width: 1025px) {
+	.first {
 		&__container {
 			height: 100%;
 			padding-top: 140px;
 			padding-bottom: 140px;
-			display: flex; justify-content: center; align-items: center;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
-		&__title{
+		&__title {
 			width: 100%;
 			text-align: center;
 		}
-		&__descr{
+		&__descr {
 			width: 100%;
 			text-align: center;
 		}
-		
 	}
 }
-@media (max-width: 769px){
-	.first{
-		&__form{
+@media (max-width: 769px) {
+	.first {
+		&__form {
 			width: 100%;
 		}
 		&__field {
@@ -112,7 +113,7 @@
 			margin: 0;
 			margin-bottom: 20px;
 		}
-		&__btn{
+		&__btn {
 			width: 100%;
 			padding-left: 25px;
 		}
